env/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: go-quick-virtual-service
 namespace: jx-staging
spec:
 gateways:
 - public-gateway.istio-system.svc.cluster.local
 hosts:
 - go-quick.canary.gopro-platform.com
 http:
 - route:
   - destination:
       host: jx-go-quick-primary.jx-staging.svc.cluster.local
       port:
         number: 80
     weight: 99
   - destination:
       host: jx-go-quick-canary.jx-staging.svc.cluster.local
       port:
         number: 80
     weight: 1
